--- a/vignettes/10.2-Uncertain-solver-use.md
+++ b/vignettes/10.2-Uncertain-solver-use.md
@@ -1,21 +1,23 @@
----
-title: "Probabilistic SteadyState Solver use"
-author: "Anne Hids, Valerie de Rijk, Joris Quik, Jaap Slootweg"
-date: "`r Sys.Date()`"
-output: github_document
-editor_options: 
-  chunk_output_type: console
----
+Probabilistic SteadyState Solver use
+================
+Anne Hids, Valerie de Rijk, Joris Quik, Jaap Slootweg
+2024-12-19
 
-SimpleBox (SBoo) has specific solvers available that allow running the model deterministic or probabilistic. We assume you already understand the basics of using SimpleBox and have an idea of what input variables or emissions you want to input with a certain degree of uncertainty or variability. There are basically two types of solvers to use here:
+SimpleBox (SBoo) has specific solvers available that allow running the
+model deterministic or probabilistic. We assume you already understand
+the basics of using SimpleBox and have an idea of what input variables
+or emissions you want to input with a certain degree of uncertainty or
+variability. There are basically two types of solvers to use here:
 
-1.  UncertainSolver for running the model n times calculating steady state output (mass/concentration)
-2.  UncertainDynamicSolver for running the model n times calculating dynamic output
+1.  UncertainSolver for running the model n times calculating steady
+    state output (mass/concentration)
+2.  UncertainDynamicSolver for running the model n times calculating
+    dynamic output
 
-For both the world needs to be initialized first, in this case for only the Molecular species.
+For both the world needs to be initialized first, in this case for only
+the Molecular species.
 
-```{r Initialize World, warning=FALSE, message=FALSE}
-
+``` r
 library(tidyverse)
 
 source("baseScripts/initWorld_onlyMolec.R")
@@ -34,9 +36,10 @@ Method 1 will be explained first, then method 2.
 
 #### Create tibble with samples for uncertain variables
 
-The first step is to determine the number of uncertain variables, the number of compartments that have emissions and the number of runs.
+The first step is to determine the number of uncertain variables, the
+number of compartments that have emissions and the number of runs.
 
-```{r Create samples, warning=FALSE, message=FALSE}
+``` r
 library(lhs)
 
 n_vars <- 3 # The number of variables you want to create a distribution for
@@ -52,11 +55,14 @@ lhs_samples_vars <- lhs_samples[, 1:n_vars]
 lhs_samples_emis <- lhs_samples[, (n_vars + 1):ncol(lhs_samples)]
 ```
 
-The lhs samples are pulled from a uniform distribution between 0 and 1. So these numbers have to be scaled to the real values you want to use, and it is possible to transform this uniform distribution to a different distribution. In this example, a triangular distribution will be used.
+The lhs samples are pulled from a uniform distribution between 0 and 1.
+So these numbers have to be scaled to the real values you want to use,
+and it is possible to transform this uniform distribution to a different
+distribution. In this example, a triangular distribution will be used.
 
 Define triangular distribution function:
 
-```{r Define triangular distribution function, warning=FALSE, message=FALSE}
+``` r
 # Triangular distribution function
 triangular_cdf_inv <- function(u, # LH scaling factor
                                a, # Minimum
@@ -70,7 +76,8 @@ triangular_cdf_inv <- function(u, # LH scaling factor
 
 ##### Prepare variable samples
 
-Now we are ready to prepare the variable data and define the min, max and peak value of the distribution for each variable.
+Now we are ready to prepare the variable data and define the min, max
+and peak value of the distribution for each variable.
 
 In this example the following three variables are used:
 
@@ -78,9 +85,10 @@ In this example the following three variables are used:
 2.  Area for regional river
 3.  Erosion of agricultural soil
 
-In the chunk below, the name, scale, subcompartment, min, max and peak value are defined for each variable.
+In the chunk below, the name, scale, subcompartment, min, max and peak
+value are defined for each variable.
 
-```{r Get min, max and peak value of variable values, warning=FALSE, message=FALSE}
+``` r
 # Define the names of the uncertain variables
 var1Name <- "kdeg"
 
@@ -118,9 +126,12 @@ var3$b <- var3$kdeg*1.5    # Maximum value
 var3$c <- var3$kdeg         # peak value (peak)
 ```
 
-Now this data needs to be combined into a tibble, and the function for the triangular distribution written earlier is applied to the tibble. The result is a nested tibble, containing the name, scale and subcompartment for each variable, and the sample data is nested.
+Now this data needs to be combined into a tibble, and the function for
+the triangular distribution written earlier is applied to the tibble.
+The result is a nested tibble, containing the name, scale and
+subcompartment for each variable, and the sample data is nested.
 
-```{r Scale the samples to the distributions, warning=FALSE, message=FALSE}
+``` r
 params <- tibble(
   varName = c(var1Name, var2Name, var3Name),
   Scale = c(var1$Scale, var2$Scale, var3$Scale),
@@ -152,9 +163,11 @@ for (i in 1:n_vars) {
 
 ##### Prepare emission data
 
-In this example, we will take a steady state emission data frame as the starting point for creating the triangular distributions. You could also directly enter the min, max and peak values if you have them.
+In this example, we will take a steady state emission data frame as the
+starting point for creating the triangular distributions. You could also
+directly enter the min, max and peak values if you have them.
 
-```{r Create steady state emission dataframe, warning=FALSE, message=FALSE}
+``` r
 # Create the steady state emission dataframe
 emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000)) # convert 1 t/y to si units: kg/s
 
@@ -162,13 +175,13 @@ MW <- World$fetchData("MW")
 
 emissions <- emissions |>
   mutate(Emis = Emis*1000/(365*24*60*60)) 
-
 ```
 
-Now that the emission data frame is made, we can scale the samples we took earlier to the triangular distribution just like we did for the variables.
+Now that the emission data frame is made, we can scale the samples we
+took earlier to the triangular distribution just like we did for the
+variables.
 
-```{r Scale the emissions to the distributions, warning=FALSE, message=FALSE}
-
+``` r
 # Define the names of the uncertain variables
 comp1Name <- "aRU"
 
@@ -236,22 +249,21 @@ for (i in 1:n_emiscomps) {
   # Update the data column in the sample_df
   emis_df$Emis[[i]] <- new_data
 }
-
 ```
 
 #### Solve
 
-The UncertainSolver is needed to apply simplebox probabilistically using a tibble with nested samples.
+The UncertainSolver is needed to apply simplebox probabilistically using
+a tibble with nested samples.
 
-```{r Solve, warning=FALSE, message=FALSE}
+``` r
 World$NewSolver("UncertainSolver")
 solved <- World$Solve(emis_df, needdebug = F, sample_df)
-
 ```
 
 # Make plots for every variable
 
-```{r Data preparation for plots}
+``` r
 Input_Variables <- 
   solved$Input_Variables |> unnest(data) 
 Input_Emission <- 
@@ -263,7 +275,11 @@ Plot_data <-
   pivot_wider(names_from = c(varName,Scale,SubCompart,Unit), values_from = value) |> 
   full_join(solved$SteadyStateMass) |>
   full_join(Input_Emission, by = c("Abbr", "RUN"))
+```
 
+    ## Joining with `by = join_by(RUN)`
+
+``` r
 varnames <- colnames(Plot_data)[2:(1+n_vars)]
 
 plot_theme <-  theme(
@@ -275,26 +291,48 @@ plot_theme <-  theme(
   )
 
 emiscomps <- unique(solved$Input_Emission$Abbr)
-
 ```
 
-```{r Plots}
+``` r
 p1 <- ggplot(Plot_data, mapping = aes(x=varnames[1], y = EqMass)) +
   geom_point() + facet_wrap(vars(Abbr)) +
   scale_y_continuous(trans = 'log10')
 p1
+```
 
+![](10.2-Uncertain-solver-use_files/figure-gfm/Plots-1.png)<!-- -->
+
+``` r
 p2_data <-
   Plot_data |> pivot_longer(varnames,
                             values_to = "Variable value",
                             names_to = "Variable") |>
   filter(SubCompart == "river")
+```
 
+    ## Warning: Using an external vector in selections was deprecated in tidyselect 1.1.0.
+    ## ℹ Please use `all_of()` or `any_of()` instead.
+    ##   # Was:
+    ##   data %>% select(varnames)
+    ## 
+    ##   # Now:
+    ##   data %>% select(all_of(varnames))
+    ## 
+    ## See <https://tidyselect.r-lib.org/reference/faq-external-vector.html>.
+    ## This warning is displayed once every 8 hours.
+    ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
+    ## generated.
+
+``` r
 p2 <-  ggplot(p2_data, mapping = aes(x=`Variable value`, y = EqMass)) +
   geom_point() + facet_wrap(vars(Scale,SubCompart,Variable)) +
   scale_y_continuous(trans = 'log10')
 p2
+```
 
+![](10.2-Uncertain-solver-use_files/figure-gfm/Plots-2.png)<!-- -->
+
+``` r
 # p3_data <-
 #   Input_Emission |> pivot_wider(names_from = c(Abbr,Unit), names_glue = "{Abbr}_Emis_{Unit}",
 #                                 values_from = Emis) |>
@@ -319,7 +357,11 @@ for(i in varnames) {
   plot_theme                 
 print(p2)
 }
+```
 
+![](10.2-Uncertain-solver-use_files/figure-gfm/Plots-3.png)<!-- -->![](10.2-Uncertain-solver-use_files/figure-gfm/Plots-4.png)<!-- -->![](10.2-Uncertain-solver-use_files/figure-gfm/Plots-5.png)<!-- -->
+
+``` r
 # Filter the plot data for the compartments that received emissions
 EM_data <- Plot_data |>
   filter(Abbr %in% emiscomps)
@@ -334,25 +376,28 @@ EM_p1 <- ggplot(EM_data, mapping = aes(x = value, y = EqMass)) +
        y = "Mass (kg)") + 
   plot_theme
 EM_p1
-
 ```
+
+![](10.2-Uncertain-solver-use_files/figure-gfm/Plots-6.png)<!-- -->
 
 ### 1.2 Uncertain variables and deterministic emission case
 
 #### Create tibble with samples for uncertain variables
 
-Because we only use one set of emissions, we only have to create samples for the number of variables we want to use.
+Because we only use one set of emissions, we only have to create samples
+for the number of variables we want to use.
 
-```{r Create samples 2, warning=FALSE, message=FALSE}
+``` r
 n_vars <- 3 # The number of variables you want to create a distribution for
 n_samples <- 100 # The number of samples you want to pull from the distributions for each variable
 
 lhs_samples <- optimumLHS(n_samples, n_vars) # Generate numbers between 0 and 1 using lhs
 ```
 
-The rest of the steps to create the dataframe with samples are the same as for method 1.
+The rest of the steps to create the dataframe with samples are the same
+as for method 1.
 
-```{r Get variable values, warning=FALSE, message=FALSE}
+``` r
 # Define the names of the uncertain variables
 var1Name <- "kdeg"
 
@@ -390,9 +435,12 @@ var3$b <- var3$kdeg*1.5    # Maximum value
 var3$c <- var3$kdeg         # peak value (peak)
 ```
 
-Now this data needs to be combined into a tibble, and the function for the triangular distribution written earlier is applied to the tibble. The result is a nested tibble, containing the name, scale and subcompartment for each variable, and the sample data is nested. 
+Now this data needs to be combined into a tibble, and the function for
+the triangular distribution written earlier is applied to the tibble.
+The result is a nested tibble, containing the name, scale and
+subcompartment for each variable, and the sample data is nested.
 
-```{r Scale the samples, warning=FALSE, message=FALSE}
+``` r
 params <- tibble(
   varName = c(var1Name, var2Name, var3Name),
   Scale = c(var1$Scale, var2$Scale, var3$Scale),
@@ -424,9 +472,10 @@ for (i in 1:n_vars) {
 
 #### Prepare emission data
 
-When using this method, all we need is one steady state dataframe with emissions.
+When using this method, all we need is one steady state dataframe with
+emissions.
 
-```{r warning=FALSE, message=FALSE}
+``` r
 # Create the steady state emission dataframe
 emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000)) # convert 1 t/y to si units: kg/s
 
@@ -434,12 +483,11 @@ MW <- World$fetchData("MW")
 
 emissions <- emissions |>
   mutate(Emis = Emis*1000/(365*24*60*60)) 
-
 ```
 
 #### Solve
 
-```{r Solve 2, warning=FALSE, message=FALSE}
+``` r
 World$NewSolver("UncertainSolver")
 
 solved <- World$Solve(emissions, needdebug = F, sample_df)
@@ -447,7 +495,7 @@ solved <- World$Solve(emissions, needdebug = F, sample_df)
 
 #### Make plots
 
-```{r}
+``` r
 Input_Variables <- 
   solved$Input_Variables |> unnest(data) 
 Input_Emission <- 
@@ -458,7 +506,11 @@ Plot_data <-
 # some units missing resulting in NA
   pivot_wider(names_from = c(varName,Scale,SubCompart,Unit), values_from = value) |> 
   full_join(solved$SteadyStateMass)
+```
 
+    ## Joining with `by = join_by(RUN)`
+
+``` r
 varnames <- colnames(Plot_data)[2:(1+n_vars)]
 
 plot_theme <-  theme(
@@ -470,15 +522,18 @@ plot_theme <-  theme(
   )
 
 emiscomps <- unique(solved$Input_Emission$Abbr)
-
 ```
 
-```{r}
+``` r
 p1 <- ggplot(Plot_data, mapping = aes(x=varnames[1], y = EqMass)) +
   geom_point() + facet_wrap(vars(Abbr)) +
   scale_y_continuous(trans = 'log10')
 p1
+```
 
+![](10.2-Uncertain-solver-use_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+
+``` r
 p2_data <-
   Plot_data |> pivot_longer(varnames,
                             values_to = "Variable value",
@@ -489,7 +544,11 @@ p2 <-  ggplot(p2_data, mapping = aes(x=`Variable value`, y = EqMass)) +
   geom_point() + facet_wrap(vars(Scale,SubCompart,Variable)) +
   scale_y_continuous(trans = 'log10')
 p2
+```
 
+![](10.2-Uncertain-solver-use_files/figure-gfm/unnamed-chunk-3-2.png)<!-- -->
+
+``` r
 # p3_data <-
 #   Input_Emission |> pivot_wider(names_from = c(Abbr,Unit), names_glue = "{Abbr}_Emis_{Unit}",
 #                                 values_from = Emis) |>
@@ -514,7 +573,6 @@ for(i in varnames) {
   plot_theme                 
 print(p2)
 }
-
 ```
 
-
+![](10.2-Uncertain-solver-use_files/figure-gfm/unnamed-chunk-3-3.png)<!-- -->![](10.2-Uncertain-solver-use_files/figure-gfm/unnamed-chunk-3-4.png)<!-- -->![](10.2-Uncertain-solver-use_files/figure-gfm/unnamed-chunk-3-5.png)<!-- -->
