--- a/vignettes/Getting started.Rmd
+++ b/vignettes/Getting started.Rmd
@@ -13,9 +13,11 @@ editor_options:
 
 This vignette demonstrates how to use SimpleBox Object-Oriented (SBOO).
 
-Before starting, make sure your working directory is set to the SBooScripts folder.
+Before starting, make sure your working directory is set to the
+SBooScripts folder.
 
 ### See if required packages are installed
+
 ```{r install packages, message = FALSE}
 
 check_and_install <- function(package) {
@@ -114,10 +116,11 @@ World$fetchData("AreaSea")
 
 ### Access k's
 
-The "kaas" variable contains a data frame with the first order rate constants (k's), 
-proccess name, to-subcompartment name from-subcompartment name, to-scale name,
-from-scale name, to-species name and from-species name. It can be
-accessed in the same way other variables are accessed:
+The "kaas" variable contains a data frame with the first order rate
+constants (k's), proccess name, to-subcompartment name
+from-subcompartment name, to-scale name, from-scale name, to-species
+name and from-species name. It can be accessed in the same way other
+variables are accessed:
 
 ```{r Access kaas, include=TRUE, warning=FALSE}
 df_ks <- World$fetchData("kaas")
@@ -126,7 +129,8 @@ df_ks <- World$fetchData("kaas")
 ## Calculate steady state output
 
 To calculate steady state masses, emissions and a solver are needed. The
-have to be given to the solver in a particular format.
+have to be given to the solver in a particular format. More details on
+solvers can be found [here](vignettes/10.1-Solver-use.md).
 
 ### Create emissions data frame
 
@@ -210,22 +214,30 @@ print(masses)
 ```
 
 ### Model Output
-For now the most reliably is to output masses and manually calculate concentrations and other relevant output based on your needs [5-12-2024].
-We are working on the Concentration module and have output of the mass flows and mass balance in preparation.
+
+For now the most reliably is to output masses and manually calculate
+concentrations and other relevant output based on your needs
+[5-12-2024]. We are working on the Concentration module and have output
+of the mass flows and mass balance in preparation.
 
 ## Calculate dynamic output
-It is also possible to calculate the masses in each compartment over time using 
-the 'DynApproxSolve' solver. The use of this solver is demonstrated below. 
+
+It is also possible to calculate the masses in each compartment over
+time using the 'DynApproxSolve' solver. The use of this solver is
+demonstrated below.
 
 ### Make emission data frame
-To use the dynamic solver, an emission dataframe is needed with three columns: 
-Abbr, Emis and Timed
 
-The column named "Abbr" contains the abbreviations, and the column "Emis" contains the
-emissions. In the example below, emissions in tonnes per year are converted to mol/s. 
-The column "Timed" contains the times at which the emissions are emitted to the environment. 
+To use the dynamic solver, an emission dataframe is needed with three
+columns: Abbr, Emis and Timed
 
-*Note: There should be at least two emissions at different times per subcompartment for the solver to work*
+The column named "Abbr" contains the abbreviations, and the column
+"Emis" contains the emissions. In the example below, emissions in tonnes
+per year are converted to mol/s. The column "Timed" contains the times
+at which the emissions are emitted to the environment.
+
+*Note: There should be at least two emissions at different times per
+subcompartment for the solver to work*
 
 ```{r Make dynamic emission dataframe, include=TRUE, warning=FALSE}
 # Make emission fata frame
@@ -246,11 +258,11 @@ solved <- World$Solve(tmax = tmax, emissions, needdebug = F)
 ```
 
 ## Prepare the output for plotting
-A few things happen in the chunk below: 
-- The matrix is converted to a tibble
-- The tibble is converted from wide to long format
-- Year is calculated from time in seconds
-- Based on the column Abbr, the States dataframe is joined to the tibble
+
+A few things happen in the chunk below: - The matrix is converted to a
+tibble - The tibble is converted from wide to long format - Year is
+calculated from time in seconds - Based on the column Abbr, the States
+dataframe is joined to the tibble
 
 ```{r}
 solved <- as_tibble(solved) 
@@ -264,7 +276,9 @@ solved_long <- solved |>
 ```
 
 ## Plot the dynamic masses at specific scales
-The scales to choose from are "Regional", "Continental", "Moderate", "Tropic" and "Arctic".
+
+The scales to choose from are "Regional", "Continental", "Moderate",
+"Tropic" and "Arctic".
 
 ```{r}
 
