--- a/vignettes/Readme.Rmd
+++ b/vignettes/Readme.Rmd
@@ -14,8 +14,8 @@ There are three additional vignettes on:
 
 -   [Getting Started](/vignettes/Getting-started.md) : this file includes all basics for users (not necessarily developers) to use and calculate with the R-implementation of SB. 
 
--   [10.1 Solver use](/vignettes/10.1-Uncertain-solver-use.Rmd) : explains how to solve for both static and dynamic data. 
--   [10.2 Probabilistic solver use](/vignettes/10.2-Uncertain-solver-use.Rmd) : explains how to solve for both static and dynamic data. 
+-   [10.1 Solver use](/vignettes/10.1-Solver-use.md) : explains how to solve for both static and dynamic data. 
+-   [10.2 Probabilistic solver use](/vignettes/10.2-Uncertain-solver-use.md) : explains how to solve for both static and dynamic data. 
 -   [10.3 Probabilistics Dynamic solver use](/vignettes/10.3-Uncertain-dynamic-solver-use.Rmd) : explains how to solve for both static and dynamic data. 
 
 -   [Vignette_progress](/vignettes/Vignette-progress.md) : tracks all process of the vignettes and if they have been recently tested
